--- a/src/H.LowCode.Theme.AntBlazorPro/Shared/MainLayout.razor
+++ b/src/H.LowCode.Theme.AntBlazorPro/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <AntDesign.ProLayout.BasicLayout 
-    Logo="@("~/images/logo.svg")"
+    Logo="@("logo.png")"
     MenuData="_menuData">
     <RightContentRender>
         @*<AntDesign.Pro.Template.Components.RightContent />*@
@@ -11,7 +11,7 @@
         @Body
     </ChildContent>
     <FooterRender>
-        <FooterView Copyright="2021 Ant Design Blazor" Links="Links"></FooterView>
+        <FooterView Copyright="2021 H.LowCode" Links="Links"></FooterView>
     </FooterRender>
 </AntDesign.ProLayout.BasicLayout>
 <SettingDrawer />
@@ -51,16 +51,9 @@
         },
         new LinkItem
         {
-            Key = "github",
-            Title = (RenderFragment)(@<Icon Type="github" />),
-            Href = "https://github.com/ant-design-blazor/ant-design-pro-blazor",
-            BlankTarget = true,
-        },
-        new LinkItem
-        {
-            Key = "Blazor",
-            Title = "Blazor",
-            Href = "https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor?WT.mc_id=DT-MVP-5003987",
+            Key = "XRender",
+            Title = "XRender",
+            Href = "https://x-render.gitee.io/",
             BlankTarget = true,
         }
     };
