--- a/src/H.LowCode.Theme.AntBlazorPro/Shared/MainLayout.razor
+++ b/src/H.LowCode.Theme.AntBlazorPro/Shared/MainLayout.razor
@@ -23,19 +23,43 @@
         new MenuDataItem
         {
             Path = "/",
-            Name = "Home",
+            Name = "首页",
             Key = "home"
         },
         new MenuDataItem
         {
-            Path = "/form/form1",
-            Name = "Form",
-            Key = "form"
+            Path = "/form/basicform",
+            Name = "基础表单",
+            Key = "basicform"
+        },
+        new MenuDataItem
+        {
+            Path = "/form/linkageform",
+            Name = "联动表单",
+            Key = "linkageform"
+        },
+        new MenuDataItem
+        {
+            Path = "/form/customform",
+            Name = "个性化表单",
+            Key = "customform"
+        },
+        new MenuDataItem
+        {
+            Path = "/form/validateform",
+            Name = "检验表单",
+            Key = "validateform"
+        },
+        new MenuDataItem
+        {
+            Path = "/form/complexform",
+            Name = "复杂表单",
+            Key = "complexform"
         },
         new MenuDataItem
         {
             Path = "/list",
-            Name = "List",
+            Name = "列表",
             Key = "list"
         }
     };
