--- a/src/H.LowCode.Theme.Html/Shared/NavMenu.razor
+++ b/src/H.LowCode.Theme.Html/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="form/form1">
+            <NavLink class="nav-link" href="form/basicform">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Form
             </NavLink>
         </li>
