--- a/src/H.LowCode.Theme.AntBlazorPro/Shared/MainLayout.razor
+++ b/src/H.LowCode.Theme.AntBlazorPro/Shared/MainLayout.razor
@@ -28,31 +28,31 @@
         },
         new MenuDataItem
         {
-            Path = "/form/basicform",
+            Path = "/form/basicform/1",
             Name = "基础表单",
             Key = "basicform"
         },
         new MenuDataItem
         {
-            Path = "/form/linkageform",
+            Path = "/form/linkageform/2",
             Name = "联动表单",
             Key = "linkageform"
         },
         new MenuDataItem
         {
-            Path = "/form/customform",
+            Path = "/form/customform/3",
             Name = "个性化表单",
             Key = "customform"
         },
         new MenuDataItem
         {
-            Path = "/form/validateform",
+            Path = "/form/validateform/4",
             Name = "检验表单",
             Key = "validateform"
         },
         new MenuDataItem
         {
-            Path = "/form/complexform",
+            Path = "/form/complexform/5",
             Name = "复杂表单",
             Key = "complexform"
         },
