--- a/src/H.LowCode.Designer.WasmHost/App.razor
+++ b/src/H.LowCode.Designer.WasmHost/App.razor
@@ -1,10 +1,21 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+﻿<Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="@Assemblies" PreferExactMatches="@true">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <RouteView RouteData="@routeData" DefaultLayout="@DefaultLayout" />
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
+        <LayoutView Layout="@DefaultLayout">
             <p>Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
 </Router>
+
+@code
+{
+    private Assembly[] Assemblies = new Assembly[]
+    {
+        typeof(H.LowCode.Designer.Admin.Shared.MainLayout).Assembly,
+        typeof(H.LowCode.DesignerEngine.Shared.MainLayout).Assembly
+    };
+
+    private Type DefaultLayout = typeof(H.LowCode.Designer.Admin.Shared.MainLayout);
+}
