--- a/src/H.LowCode.Designer.WasmHost/App.razor
+++ b/src/H.LowCode.Designer.WasmHost/App.razor
@@ -13,9 +13,9 @@
 {
     private Assembly[] Assemblies = new Assembly[]
     {
-        typeof(H.LowCode.Designer.Admin.Shared.MainLayout).Assembly,
-        typeof(H.LowCode.DesignerEngine.Shared.MainLayout).Assembly
+        typeof(H.LowCode.Designer.Admin.Shared.DesignerAdminLayout).Assembly,
+        typeof(H.LowCode.DesignerEngine.Shared.DesignerLayout).Assembly
     };
 
-    private Type DefaultLayout = typeof(H.LowCode.Designer.Admin.Shared.MainLayout);
+    private Type DefaultLayout = typeof(H.LowCode.Designer.Admin.Shared.DesignerAdminLayout);
 }
