--- a/src/H.LowCode.DesignerEngine/Shared/MainLayout.razor
+++ b/src/H.LowCode.DesignerEngine/Shared/MainLayout.razor
@@ -28,19 +28,19 @@
         },
         new MenuDataItem
         {
-            Path = "/myapp/bookadd",
+            Path = "/myapp/bookapp/bookadd",
             Name = "书籍录入",
             Key = "myapp-bookapp-add",
         },
         new MenuDataItem
         {
-            Path = "/myapp/booklend",
+            Path = "/myapp/bookapp/booklend",
             Name = "我要借书",
             Key = "myapp-bookapp-lend",
         },
         new MenuDataItem
         {
-            Path = "/myapp/bookgiveback",
+            Path = "/myapp/bookapp/bookgiveback",
             Name = "我要还书",
             Key = "myapp-bookapp-giveback",
         }
