--- a/src/H.LowCode.DesignerEngine/Pages/AppIndex.razor
+++ b/src/H.LowCode.DesignerEngine/Pages/AppIndex.razor
@@ -1,5 +1,7 @@
 ﻿@page "/myapp"
-@page "/myapp/{AppKey}"
+@page "/myapp/{AppCode}"
+
+@layout MainLayout
 
 <h1>应用设计器</h1>
 
@@ -7,5 +9,5 @@ Welcome to your app designer.
 
 @code {
     [Parameter]
-    public string AppKey { get; set; }
+    public string AppCode { get; set; }
 }
