--- a/src/H.LowCode.DesignerEngine/_Imports.razor
+++ b/src/H.LowCode.DesignerEngine/_Imports.razor
@@ -5,5 +5,9 @@
 @using System.Net.Http
 @using AntDesign.ProLayout
 @using AntDesign
-@using System.Text.Json;
-@layout MainLayout
+@using System.Text.Json
+@using H.LowCode.DesignerEngine.ComponentPanel
+@using H.LowCode.DesignerEngine.DesignPanel
+@using H.LowCode.DesignerEngine.PropertyPanel
+@using H.LowCode.DesignerEngine.Models
+@using H.LowCode.DesignerEngine.DragDrop
