--- a/src/H.LowCode.DesignerEngine/Shared/DesignerLayout.razor
+++ b/src/H.LowCode.DesignerEngine/Shared/DesignerLayout.razor
@@ -12,9 +12,9 @@
     <Content>
         @Body
     </Content>
-    <Footer Style="text-align: center; ">
+    @*<Footer Style="text-align: center; ">
         <FooterView Copyright="2021 H.LowCode" Links="Links"></FooterView>
-    </Footer>
+    </Footer>*@
 </AntDesign.Layout>
 
 @code
