--- a/src/H.LowCode.DesignerEngine/_Imports.razor
+++ b/src/H.LowCode.DesignerEngine/_Imports.razor
@@ -9,5 +9,4 @@
 @using H.LowCode.DesignerEngine.ComponentPanel
 @using H.LowCode.DesignerEngine.DesignPanel
 @using H.LowCode.DesignerEngine.PropertyPanel
-@using H.LowCode.DesignerEngine.Models
-@using H.LowCode.DesignerEngine.DragDrop
+@using H.LowCode.BlazorExtensions
