--- a/src/H.LowCode.DesignerEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/H.LowCode.DesignerEngine/ComponentPanel/ComponentPanel.razor
@@ -1,4 +1,4 @@
-﻿<Tabs DefaultActiveKey="1">
+﻿<Tabs DefaultActiveKey="1" Class="designpage" Style="width:250px; padding:0px 8px;">
     <TabPane Key="1" Tab="基础组件">
         <BasicComponent></BasicComponent>
     </TabPane>
