--- a/src/H.LowCode.DesignerEngine/Pages/DesignPage.razor
+++ b/src/H.LowCode.DesignerEngine/Pages/DesignPage.razor
@@ -2,14 +2,14 @@
 
 @layout DesignerLayout
 
-<AntDesign.Layout>
+<AntDesign.Layout Class="designpage" Style="padding:5px 2px 10px; background-color: #f7f7f7;">
     <Sider Style="flex: auto; max-width: max-content; min-width: 200px;" Theme="SiderTheme.Light">
         <ComponentPanel></ComponentPanel>
     </Sider>
-    <Content>
+    <Content Class="designpage">
         <DesignPanel></DesignPanel>
     </Content>
-    <Sider Style="flex: auto; max-width: max-content; min-width: 200px;" Theme="SiderTheme.Light">
+    <Sider Class="designpage" Style="flex: auto; max-width: max-content; min-width: 250px;" Theme="SiderTheme.Light">
         <PropertyPanel></PropertyPanel>
     </Sider>
 </AntDesign.Layout>
