--- a/src/H.LowCode.DesignerEngine/PropertyPanel/ComponentProperty.razor
+++ b/src/H.LowCode.DesignerEngine/PropertyPanel/ComponentProperty.razor
@@ -1,9 +1,9 @@
-﻿@if (DragDropItem != null)
+﻿@if (DragDropModel != null)
 {
     <label>ID <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
-    <Input TValue="string" @bind-Value="@DragDropItem.Name" />
+    <Input TValue="string" @bind-Value="@DragDropModel.Name" />
     <label>标题：</label>
-    <Input TValue="string" @bind-Value="@DragDropItem.Title" />
+    <Input TValue="string" @bind-Value="@DragDropModel.Title" />
     <label>默认值：</label>
     <Input TValue="string" @bind-Value="@Model.DefaultValue" />
     <label>必填：</label>
@@ -12,7 +12,7 @@
 
 @code {
     [Parameter]
-    public DragDropItem DragDropItem { get; set; }
+    public DragDropModel DragDropModel { get; set; }
 
     [Parameter]
     public ComponentPropertyBaseModel Model { get; set; }
