--- a/src/H.LowCode.DesignerEngine/wwwroot/designerengine.css
+++ b/src/H.LowCode.DesignerEngine/wwwroot/designerengine.css
@@ -1,12 +1,89 @@
-﻿.dragdrop-item {
+﻿/*
+ * 命名规则：{组件名称}-{元素名称}
+**/
+
+.designpage {
+    height: 100%;
+    /*overflow: auto;*/
+}
+
+/* ================== dragitem ==================== */
+.dragitem {
+    float: left;
+    width: 6.8rem;
+    height: 2.2rem;
+    margin: 4px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #333;
+    background-color: #f5f7fa;
+}
+
+    .dragitem:hover {
+        border: #409eff dashed 1px;
+        color: #409eff;
+    }
+
+/* ================== dropitem ==================== */
+.dropitem {
+    position: relative;
     display: flex;
     height: 80px;
-    margin: 2px 0px;
+    margin: 1px;
     padding: 20px 8px 5px 8px;
-    border: 1px dashed #dddddd;
+    border: #dddddd dashed 1px;
     background-color: #ffffff;
 }
 
-.dragdrop-item-selected {
-    border: 2px solid #1890ff;
+.dropitem-selected {
+    outline: #1890ff solid 2px;
+}
+
+.dropitem-title {
+    width: 180px;
+    padding-left: 25px;
+}
+
+.dropitem-div {
+    width: 100%;
+    padding-right: 50px;
+}
+
+.dropitem-icon-move {
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    height: 24px;
+    width: 24px;
+    color: #fff;
+    background-color: #409eff;
+    cursor: move;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dropitem-pointer-wrapper {
+    position: absolute;
+    z-index: 20;
+    bottom: -2px;
+    right: -2px;
+    height: 24px;
+    border-top-left-radius: 8px;
+    background: #409eff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 4px;
+}
+
+.dropitem-pointer {
+    color: #fff;
+    padding: 0 4px;
+}
+
+.dropitem-pointer:hover {
+    cursor: pointer;
 }
