--- a/src/H.LowCode.DesignerEngine/wwwroot/designerengine.css
+++ b/src/H.LowCode.DesignerEngine/wwwroot/designerengine.css
@@ -7,7 +7,7 @@
     /*overflow: auto;*/
 }
 
-/* ================== dragitem ==================== */
+/* ================== DragItem.razor ==================== */
 .dragitem {
     float: left;
     width: 6.8rem;
@@ -26,7 +26,7 @@
         color: #409eff;
     }
 
-/* ================== dropitem ==================== */
+/* ================== DropItem.razor ==================== */
 .dropitem {
     position: relative;
     display: flex;
@@ -87,3 +87,17 @@
 .dropitem-pointer:hover {
     cursor: pointer;
 }
+
+
+/* ====================== ComponentProperty.razor ========================== */
+.componentproperty-item {
+    margin: 5px 15px 20px 10px;
+}
+
+
+
+/* ====================== PageProperty.razor ========================== */
+.pageproperty-item {
+    margin: 5px 15px 20px 10px;
+}
+
