--- a/src/H.LowCode.DesignerEngine/PropertyPanel/PageProperty.razor
+++ b/src/H.LowCode.DesignerEngine/PropertyPanel/PageProperty.razor
@@ -1,10 +1,11 @@
-﻿<label>布局：</label>
-<RadioGroup TValue="int">
-    <Radio RadioButton Value="1">一列</Radio>
-    <Radio RadioButton Value="2">两列</Radio>
-    <Radio RadioButton Value="3">三列</Radio>
-    <Radio RadioButton Value="0">自适应</Radio>
-</RadioGroup>
+﻿<div class="pageproperty-item">
+    <label>布局：</label>
+    <RadioGroup TValue="int">
+        <Radio RadioButton Value="0">一列</Radio>
+        <Radio RadioButton Value="1">两列</Radio>
+        <Radio RadioButton Value="2">三列</Radio>
+    </RadioGroup>
+</div>
 
 @code {
     [Parameter]
