--- a/src/H.LowCode.WorkflowDesigner/Shared/WorkflowDesignerLayout.razor
+++ b/src/H.LowCode.WorkflowDesigner/Shared/WorkflowDesignerLayout.razor
@@ -5,7 +5,7 @@
 	<div class="fd-nav">
 		<div class="fd-nav-left">
 			<div class="fd-nav-back" @click="toReturn"><i class="anticon anticon-left"></i></div>
-			<div class="fd-nav-title">{{workFlowDef.name}}</div>
+			<div class="fd-nav-title">流程设计器</div>
 		</div>
 		<!-- <div class="fd-nav-center">
             <div class="fd-nav-container">
@@ -17,7 +17,7 @@
             </div>
         </div> -->
 		<div class="fd-nav-right">
-			<!-- <button type="button" class="ant-btn button-preview"><span>预 览</span></button> -->
+			<button type="button" class="ant-btn button-preview"><span>预 览</span></button>
 			<button type="button" class="ant-btn button-publish" @click="saveSet"><span>发 布</span></button>
 		</div>
 	</div>
