--- a/src/H.LowCode.WorkflowDesigner/Nodes/ApproveNode.razor
+++ b/src/H.LowCode.WorkflowDesigner/Nodes/ApproveNode.razor
@@ -1,14 +1,29 @@
 ﻿@*审核人节点*@
-<div class="auto-judge">
-    <div class="title-wrapper">
-        <span class="editable-title">条件1</span>
-        <span class="priority-title">优先级1</span>
-        <i class="anticon anticon-close close"></i>
+<div class="node-wrap-box">
+    <div>
+        <div class="title" style="background: rgb(255, 148, 62);">
+            <span class="iconfont"></span>
+            <span class="iconfont" style="display: none;"></span>
+            <span class="editable-title">审核人</span>
+            <i class="anticon anticon-close close"></i>
+        </div>
+        <div class="content">
+            <div class="text">直接主管</div>
+            <i class="anticon anticon-right arrow"></i>
+        </div>
     </div>
-    <div class="sort-right"></div>
-    <div class="content">发起人属于：天旭</div>
 </div>
+<AddNodeButton></AddNodeButton>
+
+@*遍历普通子节点*@
+@foreach(var childNode in Node.ChildNodes)
+{
+    <NodeWrap Node="@childNode"></NodeWrap>
+}
 
 @code {
+    [Parameter]
+    public NodeModelBase Node { get; set; }
+
     
 }
