--- a/src/H.LowCode.WorkflowDesigner/Nodes/ConditionNode.razor
+++ b/src/H.LowCode.WorkflowDesigner/Nodes/ConditionNode.razor
@@ -1,35 +1,25 @@
 ﻿@*条件节点*@
-<div class="add-node-btn-box">
-    <div class="add-node-btn">
-        <el-popover placement="right-start" v-model="visible">
-            <div class="add-node-popover-body">
-                <a class="add-node-popover-item approver" @click="AddNode(1)">
-                    <div class="item-wrapper">
-                        <span class="iconfont"></span>
-                    </div>
-                    <p>审批人</p>
-                </a>
-                <a class="add-node-popover-item notifier" @click="AddNode(2)">
-                    <div class="item-wrapper">
-                        <span class="iconfont"></span>
-                    </div>
-                    <p>抄送人</p>
-                </a>
-                <a class="add-node-popover-item condition" @click="AddNode(4)">
-                    <div class="item-wrapper">
-                        <span class="iconfont"></span>
-                    </div>
-                    <p>条件分支</p>
-                </a>
-            </div>
-            <button class="btn" type="button" slot="reference">
-                <span class="iconfont"></span>
-            </button>
-        </el-popover>
+<div class="auto-judge">
+    <div class="title-wrapper">
+        <span class="editable-title">@Node.NodeName</span>
+        <span class="priority-title">优先级1</span>
+        <i class="anticon anticon-close close"></i>
     </div>
+    <div class="sort-right">&gt;</div>
+    <div class="content">发起人属于：天旭</div>
 </div>
+<AddNodeButton></AddNodeButton>
+
+@*遍历普通子节点*@
+@foreach(var childNode in Node.ChildNodes)
+{
+    <NodeWrap Node="@childNode"></NodeWrap>
+}
 
 @code {
+    [Parameter]
+    public NodeModelBase Node { get; set; }
+
     private void AddNode(int nodeType)
     {
         
