--- a/src/H.LowCode.WorkflowDesigner/Nodes/StartNode.razor
+++ b/src/H.LowCode.WorkflowDesigner/Nodes/StartNode.razor
@@ -11,8 +11,18 @@
         </div>
     </div>
 </div>
+<AddNodeButton></AddNodeButton>
+
+@*遍历普通子节点*@
+@foreach(var childNode in Node.ChildNodes)
+{
+    <NodeWrap Node="@childNode"></NodeWrap>
+}
 
 @code {
+    [Parameter]
+    public NodeModelBase Node { get; set; }
+
     private void ShowSettingPanel()
     {
         
