--- a/src/H.LowCode.WorkflowDesigner/wwwroot/css/override-element-ui.css
+++ b/src/H.LowCode.WorkflowDesigner/wwwroot/css/override-element-ui.css
@@ -1,4 +1,4 @@
-﻿.el-drawer__header button.el-drawer__close-btn {
+.el-drawer__header button.el-drawer__close-btn {
     display: none;
 }
 
@@ -20,7 +20,7 @@
     flex: 1;
 }
 
-.demo-drawer__content > div {
+.demo-drawer__content>div {
     border-top: 1px solid #F2F2F2;
 }
 
@@ -32,20 +32,20 @@
     background: #46A6FE;
 }
 
-    .el-button.el-button--default {
-        color: #323232;
-        background: #f2f2f2;
-    }
+.el-button.el-button--default {
+    color: #323232;
+    background: #f2f2f2;
+}
 
 .demo-drawer__footer {
     padding: 10px 30px;
     border-top: 1px solid #F2F2F2;
 }
 
-    .demo-drawer__footer .el-button {
-        float: right;
-        margin-right: 10px;
-    }
+.demo-drawer__footer .el-button {
+    float: right;
+    margin-right: 10px;
+}
 
 .el-dialog {
     width: 520px;
@@ -61,31 +61,31 @@
     border-bottom: 1px solid #F2F2F2;
 }
 
-    .el-dialog__header .el-dialog__title {
-        font-size: 16px;
-        line-height: 50px;
-        color: #333333;
-    }
+.el-dialog__header .el-dialog__title {
+    font-size: 16px;
+    line-height: 50px;
+    color: #333333;
+}
 
-    .el-dialog__header .el-dialog__headerbtn {
-        height: 12px;
-        width: 12px;
-    }
+.el-dialog__header .el-dialog__headerbtn {
+    height: 12px;
+    width: 12px;
+}
 
-    .el-dialog__header .el-icon-close {
-        width: 12px;
-        height: 12px;
-        float: left;
-    }
+.el-dialog__header .el-icon-close {
+    width: 12px;
+    height: 12px;
+    float: left;
+}
 
-        .el-dialog__header .el-icon-close::before {
-            display: block;
-            width: 12px;
-            height: 12px;
-            background: url(~@/assets/images/add-close.png) no-repeat center;
-            background-size: 100% 100%;
-            content: "";
-        }
+.el-dialog__header .el-icon-close::before {
+    display: block;
+    width: 12px;
+    height: 12px;
+    background: url(~@/assets/images/add-close.png) no-repeat center;
+    background-size: 100% 100%;
+    content: "";
+}
 
 .el-dialog__footer {
     border-top: 1px solid #F2F2F2;
@@ -93,9 +93,9 @@
 }
 
 .el-checkbox,
-.el-checkbox__input.is-checked + .el-checkbox__label,
+.el-checkbox__input.is-checked+.el-checkbox__label,
 .el-radio,
-.el-radio__input.is-checked + .el-radio__label,
+.el-radio__input.is-checked+.el-radio__label,
 .el-dialog__body,
 .el-tree {
     color: #333;
@@ -104,11 +104,6 @@
 .el-radio__label, .el-checkbox__label {
     font-size: 12px;
 }
-
-.add-node-popover-body {
-    display: flex;
-}
-
 .my-el-custom-spinner {
     display: inline-block;
     width: 80px;
